developerProject/force-app/main/default/objects/OJSERLIB__Service_Callout_Log_Details__c/OJSERLIB__Service_Callout_Log_Details__c.object-meta.xml
<CustomObject>
    <label>Service Callout Log Details</label>
    <nameField>
        <label>Service Callout Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Callout Log Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>