developerProject/force-app/main/default/objects/OJSERLIB__Service_Callout_Log_Details__c/fields/OJSERLIB__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>