developerProject/force-app/main/default/objects/OJSERLIB__Service_Callout_Log_Details__c/fields/OJSERLIB__Service_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Service_Name__c</fullName>
    <label>Service Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>