developerProject/force-app/main/default/objects/OJSERLIB__Service_Callout_Log_Details__c/fields/OJSERLIB__Status__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Status__c</fullName>
    <label>Status</label>
    <length>75</length>
    <type>Text</type>
</CustomField>