developerProject/force-app/main/default/objects/OJSERLIB__Service_Callout_Log_Details__c/listViews/OJSERLIB__All.listView-meta.xml
<ListView>
    <fullName>OJSERLIB__All</fullName>
    <columns>OJSERLIB__Service_Name__c</columns>
    <columns>OJSERLIB__Status__c</columns>
    <columns>OJSERLIB__Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>